--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
             </div>
             <p>JavaScript</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:20%">20%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:40%">40%</div>
+            </div>
+            <p>Banco de dados</p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:50%">50%</div>
             </div>
             <br>
 
@@ -114,7 +118,7 @@
             conhecimentos e desenvolver minhas habilidades técnicas.
 
 
-            Github: https://github.com/giovannilf89</p>
+            Github: </p>
         </div>
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16">
@@ -122,9 +126,9 @@
           </h2>
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Autônomo</b></h5>
+            <h5 class="w3-opacity"><b>Personal Trainer</b></h5>
             <h4 class="w3-opacity"><b>
-                Personal trainer</b></h4>
+              Autônomo</b></h4>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2014 -
               <span class="w3-tag w3-indigo w3-round">Atual</span>
             </h6>
@@ -133,9 +137,9 @@
           </div>
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>REDFIT Academias</b></h5>
+            <h5 class="w3-opacity"><b>Personal Trainer</b></h5>
             <h4 class="w3-opacity"><b>
-                Personal trainer</b></h4>
+              REDFIT Academias</b></h4>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Agosto 2022 - Fevereiro 2023
             </h6>
             <p>Atendimento ao público, elaboração de treinos de acordo com a necessidade do cliente e correção na
@@ -143,8 +147,8 @@
           </div>
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Blue White Robotics</b></h5>
-            <h4 class="w3-opacity"><b>Líder de equipe</b></h4>
+            <h5 class="w3-opacity"><b>Líder de equipe</b></h5>
+            <h4 class="w3-opacity"><b>Blue White Robotics</b></h4>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Agosto 2020 - Agosto 2021
             </h6>
             <p>Líder de Equipe e Instrutor
@@ -154,8 +158,8 @@
 
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Blue White Robotics</b></h5>
-            <h4 class="w3-opacity"><b>Operador de drone</b></h4>
+            <h5 class="w3-opacity"><b>Operador de Drone</b></h5>
+            <h4 class="w3-opacity"><b>Blue White Robotics</b></h4>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2020 - Agosto 2020</h6>
             <p>Responsável pela operação do Drone e criação de planos de vôo.</p>
           </div>
@@ -170,53 +174,32 @@
             <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Educação
           </h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span
-                class="w3-tag w3-indigo w3-round">Atual</span></h6>
+            <h5 class="w3-opacity"><b>Técnico em Informática para Internet - Senac Bauru</b></h5>
+            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2023 - Abril 2024</h6>
             <p>
-              Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários.
-              A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências
-              de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
+              Curso técnico de Desenvolvimento Web, voltado para formação Full Stack (Front-end, Back-end e Mobile)
             </p>
             <ul>
-              <li><a href="https://www.dio.me/certificate/762101D2" target="_blank">Formação: Programação Reativa com
-                  Spring WebFlux (36h)</a></li>
-              <li><a href="https://www.dio.me/certificate/07041B99" target="_blank">Curso: Desenvolvimento Mobile Nativo
-                  Para Android (1h)</a></li>
-              <li><a href="https://www.dio.me/certificate/F12AC30B" target="_blank">Curso: Componentes, Layouts e UI/UX
-                  Em Apps Android (3h)</a></li>
-              <li><a href="https://www.dio.me/certificate/3FB20BF1" target="_blank">Curso: Java e Kotlin Juntos!?
-                  Construindo Apps Android (3h)</a></li>
+              <li>Elaborar projetos de aplicações para web</li>
+              <li>Desenvolver serviços web, algoritmos e aplicações para websites</li>
+              <li>Codificar front-end e back-end de aplicações web</li>
+              <li>Estruturar e implementar diagramas de banco de dados</li>
+              <li>Organizar o processo de trabalho no desenvolvimento de aplicações</li>
+              <li>Criar interface gráfica para dispositivos móveis</li>
+              <li>Codificar aplicações para dispositivos mobiles</li>
+              <li>Codificar acesso à web services e recursos de sistemas móveis</li>
+              <li>Publicar e testar aplicações web e para dispositivos móveis</li>
+              <li>Realizar manutenção de aplicações web</li>
+              <li>Documentar etapas de desenvolvimento de software</li>
+              <li>Aplicar comandos da linguagem SQL</li>
             </ul>
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Universidade de São Paulo (USP)</b></h5>
-            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2023
+            <h5 class="w3-opacity"><b>Anhanguera Bauru</b></h5>
+            <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2009 - Novembro 2013
             </h6>
-            <p>Doutorando em Engenharia de Computação com foco em acessibildiade de conteúdos educacionais.</p>
-          </div>
-        </div>
-
-        <div class="w3-container w3-card w3-white w3-margin-bottom">
-          <h2 class="w3-text-grey w3-padding-16">
-            <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Projetos
-          </h2>
-          <div class="w3-container">
-            <h6 class="w3-text-indigo">
-              <i class="fa fa-github fa-fw w3-margin-right"></i>
-              <a href="https://github.com/falvojr/copa-2022-android" target="_blank">falvojr/copa-2022-android</a>
-            </h6>
-            <p>App Android Nativo utilizando a arquitetura MVVM com Kotlin e diversas features do Android Jetpack.</p>
-            <hr>
-          </div>
-          <div class="w3-container">
-            <h6 class="w3-text-indigo">
-              <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-              <a href="https://gitlab.com/denilsonbonatti/kubernetes-projeto2-dio"
-                target="_blank">denilsonbonatti/kubernetes-projeto2-dio</a>
-            </h6>
-            <p>Repositório no GitLab com um pipeline configurado em Kubernetes.</p>
+            <p>Bacharel em Educação Física</p>
           </div>
         </div>
 
@@ -231,8 +214,8 @@
 
   <footer class="w3-container w3-indigo w3-center w3-margin-top">
     <p>Minhas Redes Sociais</p>
-    <a href="https://github.com/falvojr" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-    <a href="https://www.linkedin.com/in/falvojr" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    <a href="https://github.com/giovannilf89" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com/in/giovannilf89/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </footer>
 
