--- a/index.html
+++ b/index.html
@@ -104,21 +104,18 @@
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
-          <p>Formado em Educação Física pela faculdade Anhanguera de Bauru e com mais de 9 anos de experiência na área.
-            Em 2020, tive a oportunidade de expandir minha carreira e me tornei um operador de drone em uma startup
+          <p>Formado em Educação Física pela faculdade Anhanguera de Bauru e com mais de 9 anos de experiência na área,
+            tive a oportunidade em 2020 de expandir minha carreira e me tornei um operador de drone em uma startup
             Israelense. Foi um grande desafio que me proporcionou um aprendizado valioso. Com o tempo, fui promovido a
             líder de equipe e pude trabalhar nos Estados Unidos, treinando a nova equipe de operadores e participando
-            das operações.
+            das operações.</p>
+            
+            <p>Minha paixão pela tecnologia me levou a iniciar meus estudos em programação em 2022, e desde então venho
+            focando meus estudos em programação web. Atualmente, estou fazendo o curso
+            Técnico em Informática para Internet no Senac de Bauru.</p>
 
-            Minha paixão pela tecnologia me levou a iniciar meus estudos em programação em 2022, e desde então venho
-            aprendendo HTML, CSS, React e Javascript, com um foco em programação web. Atualmente, estou fazendo o curso
-            Técnico de Informática para Internet no Senac de Bauru.
-
-            Estou procurando uma oportunidade de estágio na área de programação web para aprimorar ainda mais meus
-            conhecimentos e desenvolver minhas habilidades técnicas.
-
-
-            Github: </p>
+            <p>Estou procurando uma oportunidade de estágio na área de programação web para aprimorar ainda mais meus
+            conhecimentos e desenvolver minhas habilidades técnicas.</p>
         </div>
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16">
@@ -126,9 +123,8 @@
           </h2>
 
           <div class="w3-container">
+            <h4 class="w3-opacity"><b>Autônomo</b></h4>
             <h5 class="w3-opacity"><b>Personal Trainer</b></h5>
-            <h4 class="w3-opacity"><b>
-              Autônomo</b></h4>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2014 -
               <span class="w3-tag w3-indigo w3-round">Atual</span>
             </h6>
@@ -137,9 +133,8 @@
           </div>
 
           <div class="w3-container">
+            <h4 class="w3-opacity"><b>REDFIT Academias</b></h4>
             <h5 class="w3-opacity"><b>Personal Trainer</b></h5>
-            <h4 class="w3-opacity"><b>
-              REDFIT Academias</b></h4>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Agosto 2022 - Fevereiro 2023
             </h6>
             <p>Atendimento ao público, elaboração de treinos de acordo com a necessidade do cliente e correção na
@@ -147,8 +142,8 @@
           </div>
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Líder de equipe</b></h5>
             <h4 class="w3-opacity"><b>Blue White Robotics</b></h4>
+            <h5 class="w3-opacity"><b>Líder de equipe</b></h5>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Agosto 2020 - Agosto 2021
             </h6>
             <p>Líder de Equipe e Instrutor
@@ -158,8 +153,8 @@
 
 
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Operador de Drone</b></h5>
             <h4 class="w3-opacity"><b>Blue White Robotics</b></h4>
+            <h5 class="w3-opacity"><b>Operador de Drone</b></h5>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2020 - Agosto 2020</h6>
             <p>Responsável pela operação do Drone e criação de planos de vôo.</p>
           </div>
