--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
             <p>JavaScript</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
-              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:40%">40%</div>
+              <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:50%">50%</div>
             </div>
             <p>Banco de dados</p>
             <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -104,8 +104,7 @@
         <div class="w3-container w3-card w3-white w3-margin-bottom">
           <h2 class="w3-text-grey w3-padding-16"><i
               class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
-          <p>Formado em Educação Física pela faculdade Anhanguera de Bauru e com mais de 9 anos de experiência na área,
-            tive a oportunidade em 2020 de expandir minha carreira e me tornei um operador de drone em uma startup
+          <p>Formado em Educação Física e com mais de 9 anos de experiência na área, em 2020 tive a oportunidade  de expandir minha carreira e me tornei um operador de drone em uma startup
             Israelense. Foi um grande desafio que me proporcionou um aprendizado valioso. Com o tempo, fui promovido a
             líder de equipe e pude trabalhar nos Estados Unidos, treinando a nova equipe de operadores e participando
             das operações.</p>
@@ -146,17 +145,16 @@
             <h5 class="w3-opacity"><b>Líder de equipe</b></h5>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Agosto 2020 - Agosto 2021
             </h6>
-            <p>Líder de Equipe e Instrutor
-              Responsável pela equipe em campo, planejamento da operação, criação de planos de vôo, elaboração de
+            <p>Responsável pela equipe em campo, planejamento da operação, criação de planos de vôo, elaboração de
               relatórios diários sobre a operação e instrutor em treinamentos (Brasil e Estados Unidos).</p>
           </div>
 
 
           <div class="w3-container">
             <h4 class="w3-opacity"><b>Blue White Robotics</b></h4>
-            <h5 class="w3-opacity"><b>Operador de Drone</b></h5>
+            <h5 class="w3-opacity"><b>Operador de drone</b></h5>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2020 - Agosto 2020</h6>
-            <p>Responsável pela operação do Drone e criação de planos de vôo.</p>
+            <p>Responsável pela operação do drone e criação de planos de vôo.</p>
           </div>
 
 
@@ -191,7 +189,7 @@
             <hr>
           </div>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Anhanguera Bauru</b></h5>
+            <h5 class="w3-opacity"><b>Educação Física - Anhanguera Bauru</b></h5>
             <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Fevereiro 2009 - Novembro 2013
             </h6>
             <p>Bacharel em Educação Física</p>
